# bcal-network

./: .env.example  .gitignore  CLAUDE.md  MBS_Pancreatic_Cancer.xlsx  Makefile  README.md  TODO.md  alembic.ini  gyn_kol.db-journal  mbs-pancreatic-cancer.html  pancreatic-cost-dashboard.html  pyproject.toml
alembic/: env.py
alembic/versions/: 0258ed0ddb0b_add_specialty_to_ahpra_and_mbs_items_.py  6e40e0137057_rename_subspecialty_to_specialty_on_.py  8f4e197b18cb_add_clinician_source_links_table.py  941d8f849f05_initial_schema.py  dda5a8653594_add_canrefer_ahpra_verification_tables.py  ec0e930a6516_add_nct_id_to_trials.py
docProps/: core.xml
docker/: Dockerfile  compose.yml
src/gyn_kol/: config.py  database.py  main.py
src/gyn_kol/ai/: classifier.py  profiles.py
src/gyn_kol/dashboard/: app.py
src/gyn_kol/exports/: crm.py  excel.py
src/gyn_kol/flows/: ingestion_flow.py  rescore_flow.py
src/gyn_kol/graph/: builder.py  centrality.py  export.py  inference.py
src/gyn_kol/ingestion/: ahpra.py  ahpra_enrich.py  canrefer.py  clinical_trials.py  crossref.py  hospitals.py  mbs.py  mbs_linkage.py  nhmrc.py  pubmed.py  ranzcog.py  reviews.py  semantic_scholar.py  verification.py
src/gyn_kol/linkedin/: ingestor.py
src/gyn_kol/models/: __init__.py  ahpra_registration.py  audit_log.py  canrefer_profile.py  clinician.py  clinician_mbs.py  clinician_profile.py  clinician_source_link.py  coauthorship.py  college_profile.py  grant.py  institutional_profile.py  mbs_item.py  paper.py  registration_verification.py  review_signal.py  trial.py
src/gyn_kol/resolution/: builder.py  matcher.py  normalise.py
src/gyn_kol/routers/: clinicians.py  exports.py  graph.py  ingestion.py  mbs.py  scores.py
src/gyn_kol/schemas/: __init__.py  clinician.py  ingestion.py  mbs.py
src/gyn_kol/scoring/: early_adopter.py  tiers.py  (+1 more)
tests/: conftest.py
tests/test_ingestion/: test_ahpra.py  test_canrefer.py  test_mbs.py  test_pubmed.py  test_verification.py
tests/test_resolution/: test_normalise.py
tests/test_scoring/: test_early_adopter.py  test_influence.py  test_tiers.py
