[project]
name = "gyn-kol"
version = "0.1.0"
description = "GYN KOL Identification App — aggregate, resolve, score and rank gynaecology key opinion leaders in Australia"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.21",
    "asyncpg>=0.30",
    "alembic>=1.15",
    "beautifulsoup4>=4.13",
    "lxml>=5.3",
    "rapidfuzz>=3.11",
    "recordlinkage>=0.16",
    "networkx>=3.4",
    "pyvis>=0.3",
    "anthropic>=0.52",
    "prefect>=3.2",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "plotly>=6.0",
    "streamlit>=1.42",
    "redis>=5.2",
    "tenacity>=9.0",
    "xmltodict>=0.14",
    "jinja2>=3.1",
    "playwright>=1.49",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
    "pre-commit>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gyn_kol"]

# ── Ruff ──────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008", "RUF002"]

[tool.ruff.lint.isort]
known-first-party = ["gyn_kol"]

# ── Mypy ──────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "pyvis.*",
    "recordlinkage.*",
    "xmltodict.*",
    "streamlit.*",
    "plotly.*",
    "prefect.*",
    "bs4.*",
    "playwright.*",
]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
